Update file paths